changed img location and name

--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    background: url(../imgs/Model\ Animation\ Project\ Background.jpg) no-repeat center center fixed;
+    background: url(./img/Modal\ Animation\ Project\ Background.jpg) no-repeat center center fixed;
     background-size: cover;
     overflow: hidden;
 }
